# tasksmack

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .iwyu.imp  .pre-commit-config.yaml  CI_REVIEW_SUMMARY.md  CI_WORKFLOW_RECOMMENDATIONS.md  CI_WORKFLOW_REVIEW_README.md  CMakeLists.txt  CMakePresets.json  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_ISSUES.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  Devshell-Updated.ps1  Devshell-Updated.shoffice.ps1  GITHUB_ISSUES_FROM_REVIEW.md  LICENSE  POWER_USAGE_IMPLEMENTATION.md  PR_REVIEW_COMMENTS.md  README.md  REVIEW_README.md  SECURITY.md  TESTING_IMPROVEMENTS_SUMMARY.md  THEME_COLOR_AUDIT.md  TODO.md  TaskSmack GPU Support Plan and Architecture.MD  completed-features.md  full_code_review.md  imgui.ini  process.md  setup.ps1  setup.sh  tasksmack.md  tasksmack.old.md
.github/: copilot-coding-agent-tips.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-llvm/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  pre-commit.yml  release.yml
_codeql_build_dir/: CPackConfig.cmake  CPackSourceConfig.cmake  TaskSmack  cmake_install.cmake
_codeql_build_dir/assets/fonts/: LICENSE.txt
_codeql_build_dir/assets/themes/: cyberpunk.toml  monochrome.toml
_codeql_build_dir/glad_cmake/: cmake_install.cmake
_codeql_build_dir/gladsources/glad_gl_core_33/: args.txt
_codeql_build_dir/tests/: TaskSmack_tests  TaskSmack_tests[1]_include.cmake  TaskSmack_tests[1]_tests.cmake  cmake_install.cmake
assets/: app.manifest.in  tasksmack.rc.in
assets/linux/: app.tasksmack.TaskSmack.desktop
assets/themes/: README.md  arctic-fire-light.toml  arctic-fire.toml  cyberpunk-light.toml  cyberpunk.toml  monochrome-light.toml  monochrome.toml  ubuntu-dark.toml  ubuntu-light.toml  windows-dark.toml  windows-light.toml
benchmarks/: CMakeLists.txt  MemoryTracker.h  bench_Format.cpp  bench_History.cpp  bench_NetlinkSocketStats.cpp  bench_ProcessModel.cpp  bench_main.cpp
cmake/: PrecompiledHeaders.cmake  TestPrecompiledHeaders.cmake
docs/: ARCHITECTURE_REVIEW_QUICKREF.md  architecture-code-review.md  architecture-review-summary.md  code-quality-improvements.md  code-review-improvements-dec-2024.md  github-issues-to-create.md  network-implementation-plan.md  panel-refactor-plan.md  test-coverage-analysis.md  test-coverage-implementation-guide.md  test-coverage-summary.md
src/: main.cpp  version.h.in
src/App/: AboutLayer.cpp  AboutLayer.h  Panel.h  ProcessColumnConfig.h  SettingsLayer.cpp  SettingsLayer.h  SettingsLayerDetail.h  ShellLayer.cpp  ShellLayer.h  UserConfig.cpp  UserConfig.h
src/App/Panels/: CpuCoresSection.cpp  CpuCoresSection.h  GpuSection.cpp  GpuSection.h  MemorySection.cpp  MemorySection.h  NetInterfaceUtils.h  NetworkPanel.cpp  NetworkPanel.h  NetworkSection.cpp  NetworkSection.h  NetworkUtils.h  ProcessDetailsPanel.cpp  ProcessDetailsPanel.h  ProcessDetailsPanel_PriorityHelpers.h  ProcessesPanel.cpp  ProcessesPanel.h  StoragePanel.cpp  StoragePanel.h  StorageSection.cpp  StorageSection.h  SystemMetricsPanel.cpp  SystemMetricsPanel.h
src/Core/: Application.cpp  Application.h  Layer.h  Window.cpp  Window.h
src/Domain/: BackgroundSampler.cpp  BackgroundSampler.h  GPUModel.cpp  GPUModel.h  GPUSnapshot.h  History.h  Numeric.h  PriorityConfig.h  ProcessModel.cpp  ProcessModel.h  ProcessSnapshot.h  SamplingConfig.h  StorageModel.cpp  StorageModel.h  StorageSnapshot.h  SystemModel.cpp  SystemModel.h  SystemSnapshot.h
src/Platform/: Factory.h  GPUTypes.h  IDiskProbe.h  IGPUProbe.h  IPathProvider.h  IPowerProbe.h  IProcessActions.h  IProcessProbe.h  ISystemProbe.h  PlatformConfig.h  PowerTypes.h  ProcessTypes.h  StorageTypes.h  SystemTypes.h
src/Platform/Linux/: DRMGPUProbe.cpp  DRMGPUProbe.h  Factory.cpp  LinuxDiskProbe.cpp  LinuxDiskProbe.h  LinuxGPUProbe.cpp  LinuxGPUProbe.h  LinuxPathProvider.cpp  LinuxPathProvider.h  LinuxPowerProbe.cpp  LinuxPowerProbe.h  LinuxProcessActions.cpp  LinuxProcessActions.h  LinuxProcessProbe.cpp  (+9 more)
src/UI/: ChartWidgets.h  Format.h  HistoryWidgets.h  IconLoader.cpp  IconLoader.h  IconsFontAwesome6.h  Numeric.h  Theme.cpp  Theme.h  ThemeLoader.cpp  ThemeLoader.h  UILayer.cpp  UILayer.h  Widgets.h
tests/: .clangd  CMakeLists.txt  test_main.cpp
tests/App/: test_ActiveTab.cpp  test_NetInterfaceUtils.cpp  test_PriorityHelpers.cpp  test_ProcessColumnConfig.cpp  test_ProcessesPanel.cpp  test_SettingsLayerDetail.cpp  test_UserConfig.cpp  test_UserConfigPersistence.cpp
tests/Core/: test_Application.cpp  test_Layer.cpp
tests/Domain/: test_BackgroundSampler.cpp  test_GPUModel.cpp  test_History.cpp  test_Numeric.cpp  test_PriorityConfig.cpp  test_ProcessModel.cpp  test_ProcessStatus.cpp  test_SamplingConfig.cpp  test_StorageModel.cpp  test_SystemModel.cpp
tests/Integration/: test_CrossLayer.cpp  test_LinuxRealProbes.cpp  test_WindowsRealProbes.cpp
tests/Mocks/: MockDiskProbe.h  MockGPUProbe.h  MockProbes.h
tests/Platform/: test_LinuxDiskProbe.cpp  test_LinuxPathProvider.cpp  test_LinuxPowerProbe.cpp  test_LinuxProcessActions.cpp  test_LinuxProcessProbe.cpp  test_LinuxSystemProbe.cpp  test_NetlinkSocketStats.cpp  test_PathProviderContract.cpp  test_PowerProbeContract.cpp  test_ProcessActionsContract.cpp  test_ProcessProbeContract.cpp  test_SystemProbeContract.cpp  test_WinString.cpp  test_WindowsDiskProbe.cpp  test_WindowsPathProvider.cpp  test_WindowsPowerProbe.cpp  test_WindowsProcessActions.cpp  test_WindowsProcessProbe.cpp  test_WindowsSystemProbe.cpp
tests/UI/: test_ChartWidgets.cpp  test_Format.cpp  test_HistoryWidgets.cpp  test_ThemeLoader.cpp
tools/: build-log.sh  build.ps1  build.sh  check-format.ps1  check-format.sh  check-prereqs.ps1  check-prereqs.sh  clang-format.ps1  clang-format.sh  clang-tidy.ps1  clang-tidy.sh  common.sh  configure.ps1  configure.sh  coverage.ps1  coverage.sh  create-ci-issues.sh  generate-icons.ps1  generate-icons.sh  install-local.sh  iwyu.sh  md-link-audit.ps1  md-link-audit.sh
(+24 files in other folders)
